--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Темеров Антон КИ20-20Б</title>
+    <title>Руднев Даниил КИ20-20Б</title>
     <link rel="stylesheet" href="assets/css/main.css"> 
 </head>
 <body>
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
                 <div class="header__user">
-                    <a class="header__username" href="#">Ваше имя</a>
+                    <a class="header__username" href="#">Даниил</a>
                     <img class="header__userpic" src="assets/images/sign-in.png"  alt="Иконка профиля">
                 </div>
             </nav>
