--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,6 @@
                 <div class="header__menu">
                     <img src="assets/images/logo.png" class="header__image" alt="Логотип ИКИТ">
 
-
-                    <input id="menu-toggle" type="checkbox" />
-                    <label class='menu-button-container' for="menu-toggle">
-                        <div class='menu-button'></div>
-                    </label> 
-
                     <ul class="header__list menu">
                         <li class="header__item header__item--active"><a href="#">Главная</a></li>
                         <li class="header__item"><a href="#">Информация</a></li>
@@ -29,11 +23,11 @@
                 </div>
                 <div class="header__user">
                     <a class="header__username" href="#">Даниил</a>
-                    <img class="header__userpic" src="assets/images/sign-in.png"  alt="Иконка профиля">
+                    <img class="header__userlogo" src="assets/images/sign-in.png"  alt="Логотип профиля">
                 </div>
             </nav>
         </div>  
-    </header>  
+    </header> 
     <div class="page container">
         <h1 class="page__title">Личная страница</h1>
         <h2 class="page__subtitle">Полезная информация</h2>
@@ -51,24 +45,27 @@
             </div>
             <h2 class="section__title">Сервисы</h2>
             <ul class="section__list">
-                <li class="section__item">Список 1</li>
-                <li class="section__item">Список 2</li>
+                <li class="section__item">A</li>
+                <li class="section__item">B</li>
+                <li class="section__item">C</li>
+                <li class="section__item">D</li>
+                <li class="section__item">E</li>
             </ul>
         </article>
         <article class="section__right">
-            <h2 class="section__title">Структуры даных. Бинарное дерево поиска</h2>
+            <h2 class="section__title">Название название</h2>
             <div class="section__decription">
-                <h3 class="section__subtitle">Что такое дерево? </h3>
-                <p class="section__text">Деревья — наверное одна, из самых широко используемых структур даных. Деревья помогают представить данные в, внимание, древовидной структуре☺ Деревеьв на самом деле просто невероятное количество, и каждое используется с какой то своей определенной целью.</p>
+                <h3 class="section__subtitle">Что такое А </h3>
+                <p class="section__text">А - это первая буква алфавита. Она его начинает, и если называть буквы в обратном порядке, то и заканчивает.</p>
             </div>
             <div class="section__decription">
-                <h3 class="section__subtitle">Алгоритмы сортировки. QuickSort</h3>
-                <p class="section__text">QuickSort по праву называется королем среди алгоритмов сортировки, и наверное, самый известный алгоритм сортировки. Сам алгоритм был разработан в 1960году математиком Чарльзом Харном. В связи с тем, что в худшем случае, или в близком к худшему случае алгоритм невероятно деградирует, Роберт Седжвик, в своем курсе на Coursera рекомендует его перемешать перед проведенеием сортировки, и если после пересортировки ваш массив превратиться в самый худший случай — то вы действительно удивительно неудачливы, и вам стоит поставить свечку в церкве, чистить карму, да и всячески оправдываться перед судьбой, а не заниматься алгоритмами☺</p>
+                <h3 class="section__subtitle">Как понять слово "Здравствуйте"</h3>
+                <p class="section__text">Здравствуйте - это такое слово, которое по этимологии своей интерпретировалось как пожелание другому человеку здоровья (откуда и корень "здравствуй" образованный от слова "здоровье"), однако в настоящее время это слово общепринято воспринимается как приветствие.</p>
             </div>
         </article>
     </section>
     <div class="container special">
-        <h2 class="special__title">Интересные статьи</h2>
+        <h2 class="special__title">Статьи</h2>
         <div class="special__icons">
             <button class="special__icon-button" id="icon__list-button">
                 <svg  viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -89,43 +86,30 @@
                     </svg>
             </button>
         </div>
-        <p class="special__subtitle">Последние новости интернета</p>
+        <p class="special__subtitle">Новости</p>
     </div>
     <div class="card container">
         <article class="card__body">
-            <img class="card__image" src="/assets/images/cover-youtube2.jpg" alt="YouTube логотип">
+            <img class="card__image" src="/assets/images/first.jpg" alt="Первая картинка">
             <div class="card__content">
                 <div class="card__description">
-                    <h3 class="card__title">Первому ролику на «Ютубе» исполнилось 10 лет</h3>
-                    <p class="card__text">23 апреля 2005 года на сайте YouTube был опубликован видеоролик Me at the zoo, представленный выше. Главный герой — Джавед Карим, который подглуповато рассказывает о слонах, находясь в зоопарке.</p>
+                    <h3 class="card__title">Нравится это изображение?</h3>
+                    <p class="card__text">Если вам понравилась эта картинка и вы думаете, что её нарисовал человек, то вы удивитесь. Данное изображение было сгенерировано нейросетью. Круто, не правда ли?</p>
                 </div>
                 <footer>
-                    <p class="card__date">1 January, 2021 · 6 min read</p>
+                    <p class="card__date">2 January, 2022 · 6 min read</p>
                 </footer>
             </div>
         </article>
         <article class="card__body">
-            <img class="card__image" src="/assets/images/vk.png" alt="VK логотип">
+            <img class="card__image" src="/assets/images/second.jpg" alt="Вторая картинка">
             <div class="card__content">
                 <div class="card__description">
-                    <h3 class="card__title">Социальная сеть ВКонтакте подвела итоги первого квартала 2022 года</h3>
-                    <p class="card__text">Кроме финансовых итогов первого квартала 2022 года от самой компании VK, были подведены еще и итоги социальной сети ВКонтакте. Так за первый квартал среднее значение общей ежемесячной аудитории соцсети составило 73,4 млн, а средний ежедневный показатель в России — 47,2 млн.</p>
+                    <h3 class="card__title">А эта зацепила?</h3>
+                    <p class="card__text">Верно, эта картина тоже была создана с помощью нейросети, но уже другой. Их теперь много знаете. Даже жутко немного, в такое время живём, программы так быстро умнеют, но думаю, что всё только впереди)</p>
                 </div>
                 <footer>
-                    <p class="card__date">28 February, 2022 · 6 min read</p>
-                </footer>
-            </div>
-        </article>
-        <article class="card__body">
-            <img class="card__image" src="/assets/images/tinkoff.png" alt="Tinkoff логотип">
-            <div class="card__content">
-                <div class="card__description">
-                    <h3 class="card__title">API для Инвестиций, или Как написать торгового робота</h3>
-                    <p class="card__text">На связи команда Тинькофф Инвестиций. В этой статье разберем, как клиенты с минимальными навыками программирования создают торговых роботов.
-                            Базой будет API брокера Тинькофф Инвестиций — Tinkoff Invest API. Добро пожаловать на борт! </p>
-                </div>
-                <footer>
-                    <p class="card__date">Mar 16, 2020 · 6 min read</p>
+                    <p class="card__date">13 April, 2022 · 8 min read</p>
                 </footer>
             </div>
         </article>
@@ -136,7 +120,7 @@
         </div>
         <form class="card-add__form" onsubmit="return false;">
             <div class="card-add__form-wrapper">
-                <label class="card-label__name">Название статьи</label>
+                <label class="card-label__name">Название</label>
                 <input type="text" id="card-text-name">
                 <label class="card-label__url">Ссылка на картинку</label>
                 <input type="text" id="card-text-url">
@@ -152,21 +136,17 @@
     <div class="faq container" id="faq">
         <h3 class="faq__title">FAQ</h2>
         <dl class="faq__wrapper">
-            <dt class="faq__question">Что нужно знать о контенте в ВК?</dt>
-            <dd class="faq__answer">Контент-маркетинг в «ВКонтакте» работает по тем же принципам, что и в других соцсетях, уверена Анна Галашева. Она говорит, что у аудитории там такие же проблемы, как в других социальных сетях. Однако у ВК есть свои особенности.
-            В ВК — сильные лидеры мнений, а лайфстайл-блогером там быть трудно. Вера Малова из «Палиндрома» объясняет: «В Instagram* можно было показывать свою жизнь и получать внимание. Во „ВКонтакте“ так не получается — здесь блогер должен давать полезный контент».</dd>
-            <dt class="faq__question">Как работает реклама «ВКонтакте»</dt>
-            <dd class="faq__answer">Принципы размещения рекламы «ВКонтакте» похожи на таргетинг в Facebook* (деятельность Facebook* объявлена в России экстремистской и запрещена).
-            Во «ВКонтакте» две главные позиции для размещения рекламы. Первая — лента новостей. Там реклама размещается между записями, которые просматривают пользователи. Вторая — текстово-графические блоки слева под основным меню.</dd>
-            <dt class="faq__question">Какие ещё инструменты продвижения есть во «ВКонтакте»</dt>
-            <dd class="faq__answer">Прямые эфиры. Запускать прямые эфиры можно как с личной страницы, так и от лица сообщества. Трансляции доступны с телефона и с компьютера. При запуске эфира с мобильного приложения оповещение об этом эфире автоматически уходит в истории.</dd>
+            <dt class="faq__question">Вам нравятся тортики?</dt>
+            <dd class="faq__answer">Торт - это ложь</dd>
+            <dt class="faq__question">Это была отсылка на Portal?</dt>
+            <dd class="faq__answer">Да, была</dd>
         </dl>
     </div>
     <footer class="footer"> 
         <div class="container">
             <p class="footer__text">© 2022 Институт космических и информационных технологий СФУ</p>
         </div>
-    </footer> 
+    </footer>
 </body>
-<script  rel="stylesheet" src="/assets/js/main.js"></script> 
+<script src="/assets/js/main.js"></script> 
 </html>
